# crane_x7_ros_modified_by_group2

./: README.en.md  README.md
crane_x7/: package.xml
crane_x7_description/: package.xml
crane_x7_description/meshes/pencase/: coordinate.dae  hude.dae  test.dae
crane_x7_description/urdf/: crane_x7.urdf.xacro  crane_x7.xacro  pen.urdf
crane_x7_examples/: CMakeLists.txt  README.md  package.xml
crane_x7_examples/scripts/JOINT/: JOIN1.py  JOIN2.py  JOIN3.py  JOIN4.py  JPub.py  JSub.py  Pub.py  SEARCH.csv  SYU1.py  Sub.py  WA.csv  moto.py  uke.py
crane_x7_examples/scripts/JOINT/Practice/: JPub.py
crane_x7_examples/scripts/MOJI/MOJIcsv/: JOINT.py  KO.csv  Mcav1.py  Mcav2.py  Mcav3.py  Mcav4.py  Mcav5.py  NA.csv  NURA.csv  REIWA.csv  REIWA.txt  RO.csv  ROs.csv  SUs.csv
crane_x7_examples/scripts/MOJI/MOJIver2/: MITU.csv  Mcsv5.py  README.md  REI.csv  REIWA.csv  WA-l.csv  WA-r.csv  WA.csv  reMcsv1.py
crane_x7_examples/scripts/OpenCV/: opencv.py  opencv2.py
crane_x7_examples/scripts/Practice/: JPub.py  JSub.py  JSub_mituver.py  MITU.csv  Nura.csv  REI.csv
crane_x7_examples/scripts/SIMULATION/: KAMI.txt  KORONA.txt  MITU.txt  TORISETU.md  WA.txt  a.out  kaneko.txt  korona.csv  re:REIWA.txt  sim2.c  sim3.c
crane_x7_examples/scripts/TOPIC/: NYU.py  SYU.py  time_pub.py  time_sub.py
crane_x7_gazebo/: package.xml
crane_x7_gazebo/launch/: crane_x7_with_table.launch
crane_x7_gazebo/worlds/: syuzi.world  table.world
